--- a/meesho.html
+++ b/meesho.html
@@ -120,7 +120,13 @@
             /* border: 1px solid blue; */
             margin-left: 25px;
             /* padding-right: 10px; */
+           
         }
+        #navbar>div:nth-child(2)>div:nth-child(3)>div>a{
+            text-decoration: none;
+            color: black;
+        }
+       
 
         #navbar>div:nth-child(2)>div:nth-child(3)>div>i {
             /* border: 1px solid blue; */
@@ -782,8 +788,8 @@
                         <p>Profile</p>
                     </div>
 
-                    <div><i class="fa-solid fa-cart-shopping"></i>
-                        <p>Cart</p>
+                    <div> <a href="/meeshocart.htm"><i class="fa-solid fa-cart-shopping"></i>
+                        <p>Cart</p></a>
                     </div>
 
 
