--- a/meeshocarttri.html
+++ b/meeshocarttri.html
@@ -6,15 +6,33 @@
     <title>Document</title>
 
     <style>
-        body>div{
+
+       
+
+        
+       #logo{
+            width: 10%;
+            border: 1px solid blue;
+
+        }
+
+        #logo>a>img {
             width: 100%;
-            height: 70px;
+            height: 100%;
+            /* align-items: center; */
+
+            padding: 12px;
+        }
+
+        body>div:nth-child(1){
+            width: 100%;
+            /* height: 70px; */
             border: 1px solid red;
         }
 
-         body>div>div{
+         body>div:nth-child(1)>div:nth-child(2){
             width: 20%;
-             height: 70px;
+             /* height: 70px; */
             border: 1px solid red;
             margin: auto;
             display: flex;
@@ -22,7 +40,7 @@
 
          }
 
-          body>div>div>div{
+          body>div:nth-child(1)>div:nth-child(2)>div{
             width: 20px;
              height: 20px;
              border-radius: 50%;
@@ -30,10 +48,10 @@
                text-align: center;
 
           }
-             body>div>div>span{
+             body>div:nth-child(1)>div:nth-child(2)>span{
                 width: 20%;
                   border: 1px solid rgb(0, 255, 98);
-                  height: 0%;
+                  /* height: 0%; */
 
 
              }
@@ -45,6 +63,12 @@
 <body>
 
     <div>
+        <div id="logo">
+            <a href="/meesho.html"> <img
+                    src="https://uploads-ssl.webflow.com/62bc395da3c33ed00dcc1317/634bd1950007a1468123fe05_logo%20meesho%20-p-500.png"></a>
+
+        </div>
+
         <div>
             <div>1</div>
             <span></span>
